zakończenie projektu: zmieniono zachowanie silnika można zmienić intensywność rpm step, ulepszono adjustrpm, podrasowano gui o menu button ustawień, optymalizacja liczenie kąta auta tylko wtedy wystąpi zauważalna zmiana